tests/baselines/Issue63.txt
original file
-----------------------------------
^^type ^^Callback <^^T> = ^^(error: Error, value: T) => any

^^type Callback^^<T > = ^^(error: Error, value: T) ^^=> ^^any

type Callback = ^^(error: Error, value: T) => ^^any

^^type ^^Callback^^<string ^^| ^^(a: number, b: string) => ^^void> = ^^(error: Error, value: T) => ^^any

^^ type ^^Foo <^^T > = ^^{

	^^foo: ^^T,
	^^bar: ^^number

^^}
-----------------------------------

[1, 1]: source.ts meta.type.declaration.ts keyword.other.ts 
[1, 6]: source.ts meta.type.declaration.ts entity.name.class.ts 
[1, 16]: source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.name.ts 
[1, 21]: source.ts meta.type.declaration.ts meta.type.paren.cover.ts 
[3, 1]: source.ts meta.type.declaration.ts keyword.other.ts 
[3, 14]: source.ts meta.type.declaration.ts meta.type.parameters.ts meta.brace.angle.ts 
[3, 21]: source.ts meta.type.declaration.ts meta.type.paren.cover.ts 
[3, 46]: source.ts meta.type.declaration.ts meta.type.function.return.ts keyword.operator.ts 
[3, 49]: source.ts meta.type.declaration.ts meta.type.function.return.ts meta.type.primitive.ts support.type.ts 
[5, 17]: source.ts meta.type.declaration.ts meta.type.paren.cover.ts 
[5, 45]: source.ts meta.type.declaration.ts meta.type.function.return.ts meta.type.primitive.ts support.type.ts 
[7, 1]: source.ts meta.type.declaration.ts keyword.other.ts 
[7, 6]: source.ts meta.type.declaration.ts entity.name.class.ts 
[7, 14]: source.ts meta.type.declaration.ts meta.type.parameters.ts meta.brace.angle.ts 
[7, 22]: source.ts meta.type.declaration.ts meta.type.parameters.ts keyword.operator.type.ts 
[7, 24]: source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.paren.cover.ts 
[7, 50]: source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.function.return.ts meta.type.primitive.ts support.type.ts 
[7, 58]: source.ts meta.type.declaration.ts meta.type.paren.cover.ts 
[7, 86]: source.ts meta.type.declaration.ts meta.type.function.return.ts meta.type.primitive.ts support.type.ts 
[9, 1]: source.ts 
[9, 7]: source.ts meta.type.declaration.ts entity.name.class.ts 
[9, 12]: source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.name.ts 
[9, 18]: source.ts meta.type.declaration.ts meta.object.type.ts meta.brace.curly.ts 
[11, 2]: source.ts meta.type.declaration.ts meta.object.type.ts meta.field.declaration.ts variable.ts 
[11, 7]: source.ts meta.type.declaration.ts meta.object.type.ts meta.field.declaration.ts 
[12, 2]: source.ts meta.type.declaration.ts meta.object.type.ts meta.field.declaration.ts variable.ts 
[12, 7]: source.ts meta.type.declaration.ts meta.object.type.ts meta.field.declaration.ts meta.type.primitive.ts support.type.ts 
[14, 1]: source.ts meta.type.declaration.ts meta.object.type.ts meta.brace.curly.ts 